// protoc --proto_path=./ --java_out=./ ./ChatMessageRequest.proto
syntax = "proto3";

option java_outer_classname = "ChatMessageRequest";

message ChatRequest{
  string playerId = 1;
  int32 chatMode = 2;
  string playerName = 3;
  string channelId = 4;
  string content = 5;
}

message PlayerLoginInfo{
  string playerName = 1;
  string password = 2;
}

